Fix long commit bodies not properly wrapping inside <pre>

--- a/public/less/_repository.less
+++ b/public/less/_repository.less
@@ -1611,3 +1611,7 @@
     vertical-align: baseline;
 }
 
+.commit-body {
+    white-space: pre-wrap;
+}
+
